# dcs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
docs/: 01-REQUIREMENTS.md  02-SOLUTION-ARCHITECTURE.md  03-PROOF-OF-CONCEPT.md
src/dcs/: api.py  cli.py
src/dcs/index/: es_client.py  indexer.py  mapper.py
src/dcs/ingest/: cleaner.py  fetcher.py
src/dcs/lexicalsearch/: index.py  map.py  search.py
src/dcs/models/: product.py
src/dcs/utils/: config.py  string_utils.py
